[tool.poetry]
name = "jimmy"
version = "0.1.0"
description = ""
authors = ["Andre Lehmann <aisberg@posteo.de>"]

[tool.poetry.dependencies]
jinja2 = "^2.10.0"
pyexcel-io = "^0.6.0"
python = "^3.6"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.0"
pytest = "^5.2"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
