[tool.poetry]
name = "jintaro"
version = "0.1.0"
description = ""
authors = ["Andre Lehmann <aisberg@posteo.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/aisbergg/python-jintaro"
repository = "https://github.com/aisbergg/python-jintaro"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
cerberus = "^1.3.2"
jinja2 = "^2.10.0"
pyexcel = "^0.6.5"
pyexcel-io = "^0.6.0"
pyexcel-odsr = "^0.6.0"
pyexcel-xlsx = "^0.6.0"
python = "^3.6.1"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]
poethepoet = "^0.9.0"
pyinstaller = "^4.0"
pylint = "^2.6.0"
pytest = "^5.2"
yapf = "^0.30.0"

[tool.poetry.scripts]
jintaro = "jintaro.cli:main"

[tool.poe.tasks]
format = {cmd = "yapf -i -r -vv -p .", help = "Format the code using YAPF"}
_clean = """
rm -rf .coverage
       .pytest_cache
       dist
       build
       ./**/__pycache__
"""
clean = {ref = "_clean", help = "Clean up temporary files"}
test = {cmd = "pytest --cov=jintaro", help = "Run the test suits"}
build = {shell = "poetry build & pyinstaller --onefile jintaro.spec", help = "Build the applications"}
_publish = {cmd = "poetry publish"}
release = {sequence = ["format", "test", "build", "_publish"], help = "Create a release of the application and publish it on PyPi"}
bump = {cmd = "bump2version --allow-dirty"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
